# SenClaw

./: .dockerignore  .env.example  .env.linux.example  .env.windows.example  .gitattributes  .gitignore  Dockerfile  PRODUCTION_READINESS.md  README.md  README.zh-CN.md  biome.json  knip.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  senclaw  senclaw.cmd  tsconfig.base.json  tsconfig.workspace.json  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml
apps/agent-runner/: package.json  tsconfig.json
apps/connector-worker/: package.json
apps/gateway/: package.json  tsconfig.json
apps/scheduler/: README.md  package.json  tsconfig.json
apps/tool-runner-host/: package.json  tsconfig.json
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: IMPLEMENTATION_ROADMAP.md
docs/api/: agent-runtime.md  authentication.md  connectors.md  observability.md  scheduler.md  tool-sandbox.md
docs/development/: bootstrap.md  dependency-boundaries.md  error-handling-policy.md  local-validation-windows.md  module-ownership.md  platform-conventions.md  testing.md
native/: Cargo.toml  README.md
native/sandbox-runner/: Cargo.toml  README.md
native/sandbox-runner/src/: lib.rs  main.rs
openspec/: COMPLETION_SUMMARY.md
scripts/: bootstrap-admin-key.ts  bootstrap.linux.sh  bootstrap.windows.ps1  local-runtime.js  local-runtime.ts  persistence-smoke-test.mjs  provider-smoke-test.ts  start-senclaw.cmd  start-senclaw.sh  stop-senclaw.cmd  stop-senclaw.sh
tests/integration/: agent-flow.test.ts  connector-worker.test.ts  (+7 more)
(+215 files in other folders)
