[package]
name = "sandbox-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }